added login and register forms to home page

--- a/public/updateprofile.html
+++ b/public/updateprofile.html
@@ -8,5 +8,12 @@
 
   <body>
     <h1>improve yourself</h1>
+
+    <form method="POST" action="/:userID/editProfile">
+              User name:<input type="text" name="userName"/>
+              Password:<input type="password" name="password"/>
+              <input type="submit" value= "login">
+    </form>
+
   </body>
 </html>
