--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,18 @@
 
   <body>
     <h1>login page</h1>
+
+    <form method="POST" action="/">
+              User name:<input type="text" name="userName"/>
+              Password:<input type="password" name="password"/>
+              <input type="submit" value= "login">
+    </form>
+
+     <form method="POST" action="/register">
+              User name:<input type="text" name="userName"/>
+              Password:<input type="password" name="password"/>
+              <input type="submit" value= "Register">
+    </form>
+
   </body>
 </html>
