Added route for /dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>Home Page</title>
-
-
+    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="/scripts/dashboard.js"></script>
   </head>
 
   <body>
