--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Home Page</title>
 
-
   </head>
 
   <body>
@@ -20,6 +19,8 @@
               Password:<input type="password" name="password"/>
               <input type="submit" value= "Register">
     </form>
+
+<!-- TODO: make a index.js to accompany this file with a submit button on click event handler that makes AJAX request, pings db for user log in authentication, if valid: post. if not: prevent default and give flash message -->
 
   </body>
 </html>
