--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1>login page</h1>
 
+    <img src="./images/cute-skull-wallpaper-17.jpeg" id="mainLogo"
+
     <form method="POST" action="/">
               User name:<input type="text" name="userName"/>
               Password:<input type="password" name="password"/>
