--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <body>
     <h1>login page</h1>
 
-    <img src="./images/cute-skull-wallpaper-17.jpeg" id="mainLogo"
+    <img src="./images/cute-skull-wallpaper-17.jpeg" id="mainLogo">
 
     <form method="POST" action="/">
               User name:<input type="text" name="userName"/>
               Password:<input type="password" name="password"/>
-              <input type="submit" value= "login">
+              <input type="submit" value= "Login">
     </form>
 
      <form method="POST" action="/register">
