--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>login page</h1>
 
-    <img src="./images/cute-skull-wallpaper-17.jpeg" id="mainLogo"
+    <img src="./images/cute-skull-wallpaper-17.jpeg" id="mainLogo">
 
     <form method="POST" action="/">
               User name:<input type="text" name="userName"/>
