added links on dashboard page to test routes.

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,7 +9,11 @@
   </head>
 
   <body>
-    <div class="nav-bar">Skeletapp</div>
+    <div class="nav-bar">Skeletapp
+      <br><a href="/editProfile">Edit Profile</a>
+      <br><a href="/logout">Logout</a>
+
+    </div>
 
 
     <main class="container">
