Cookies set for log in page

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <img src="./images/cute-skull-wallpaper-17.jpeg" id="mainLogo">
 
     <form method="POST" action="/">
-              User name:<input type="text" name="userName"/>
+              User name:<input type="text" name="email"/>
               Password:<input type="password" name="password"/>
               <input type="submit" value= "Login">
     </form>
