Added most routes

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -19,7 +19,7 @@
     <main class="container">
       <section class="new-todo">
         <h2>What do you need to do?</h2>
-        <form method="POST" action="/:userID">
+        <form>
           <textarea id= "newTodoText" name="text" placeholder="What needs to be done?"></textarea>
           <input id="submitTodo" type="submit" value="add it on">
         </form>
