--- a/public/register.html
+++ b/public/register.html
@@ -10,6 +10,11 @@
     <h1>register you ho</h1>
 
 
-
+    <form method="POST" action="/register">
+             Name:<input type="text" name="name"/>
+             Email:<input type="text" name="email"/>
+             Password:<input type="password" name="password"/>
+             <input type="submit" value= "Register">
+   </form>
   </body>
 </html>
