Added edit profile functionality

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,7 +10,7 @@
 
 
 <ul id="dropdown1" class="dropdown-content">
-  <li><a href="/editProfile">Edit Profile</a></li>
+  <li><a href="/updateprofile">Edit Profile</a></li>
   <li><a href="/logout">logout</a></li>
 </ul>
 <nav>
@@ -32,41 +32,6 @@
         </form>
       </section>
 
-<!-- <div id="buybutton" class="col s2 offset-s1">TO BUY</div>
-<section class="todolist">
-
-  <ul class="collapsible" data-collapsible="accordion">
-    <li>
-      <div class="collapsible-header">a hat</div>
-      <div class="collapsible-body"><span>shaped like a banana</span>
-        <img src="/images/deleteicon.png" class="material-icons">
-        <img src="/images/list.ico" class="material-icons">
-      </div>
-    </li>
-    <li>
-      <div class="collapsible-header"></i>a car</div>
-      <div class="collapsible-body"><span>a car crash</span>
-        <img src="/images/deleteicon.png" class="material-icons">
-        <img src="/images/list.ico" class="material-icons">
-      </div>
-    </li>
-    <li>
-      <div class="collapsible-header"></i>a chicken</div>
-      <div class="collapsible-body"><span>bawk bawk</span>
-        <img src="/images/deleteicon.png" class="material-icons">
-        <img src="/images/list.ico" class="material-icons">
-      </div>
-    </li>
-    <li>
-      <div class="collapsible-header"></i>an action figure</div>
-      <div class="collapsible-body"><span>pew pew</span>
-        <img src="/images/deleteicon.png" class="material-icons">
-        <img src="/images/list.ico" class="material-icons">
-      </div>
-    </li>
-  </ul>
-  </section> -->
-
   </body>
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/dashboard.js"></script>
@@ -75,4 +40,3 @@
 
 
 </html>
-
