Not sure if del button works right now - waiting on the individual item cards collapsible feature fix before i can check

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -31,7 +31,7 @@
           <input id="submitTodo" type="submit" value="add it on">
         </form>
       </section>
-
+    </main>
   </body>
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/dashboard.js"></script>
