--- a/public/updateprofile.html
+++ b/public/updateprofile.html
@@ -2,20 +2,36 @@
 <html lang="en">
   <head>
     <title>Home Page</title>
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/updateprofile.js"></script>
-
   </head>
+    <link rel="stylesheet" type="text/css" href="styles/dashboard.css"></link>
+    <link rel="stylesheet" type="text/css" href="css/style.css"></link>
 
   <body>
-    <h1>improve yourself</h1>
+      <ul id="dropdown1" class="dropdown-content">
+      <li><a href="/">Dashboard</a></li>
+      <li><a href="/logout">logout</a></li>
+    </ul>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="/" class="brand-logo">Logo</a>
+        <!-- <ul class="right hide-on-med-and-down"> -->
+          <!-- Dropdown Trigger -->
+          <a class="dropdown-button" href="#!" data-activates="dropdown1">Settings<i class="material-icons right"></i></a>
+        <!-- </ul> -->
+      </div>
+    </nav>
 
-    <form>
-              Name:<input type="text" name="name" class="inputVal">
-              Email:<input type="email" name="email" class="inputVal">
+    <h1 id="updateTitle">Update Profile</h1>
+
+    <form class="profileEdit">
+              Name:<input type="text" name="name" class="inputVal"><br>
+              Email:<input type="email" name="email" class="inputVal"><br>
               Password:<input type="password" name="password" class="inputVal">
               <input type="submit" value= "update">
     </form>
 
   </body>
+    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+
 </html>
