--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -31,12 +31,14 @@
           <input id="submitTodo" type="submit" value="add it on">
         </form>
       </section>
-
+      </main>
   </body>
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/dashboard.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/style.css"></script>
+  <link rel="stylesheet" type="text/css" href="styles/dashboard.css"></link>
+
+  <link rel="stylesheet" type="text/css" href="css/style.css"></link>
 
 
 </html>
