--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,11 +35,11 @@
       </form>
     </section>
   </main>
-  <div data-cat="watch" id="watch"></div>
-  <div data-cat="read" id="read"></div>
-  <div data-cat="eat" id="eat"></div>
-  <div data-cat="buy" id="buy"></div>
-  <div data-cat="misc" id="misc"></div>
+  <div>Things to watch</div><div data-cat="watch" id="watch"></div>
+  <div>Books to read</div><div data-cat="read" id="read"></div>
+  <div>Places to eat at</div><div data-cat="eat" id="eat"></div>
+  <div>Stuff to buy</div><div data-cat="buy" id="buy"></div>
+  <div>Miscellaneous</div><div data-cat="misc" id="misc"></div>
 </body>
 
 
