Added back some attributes that were deleted in the html overhaul

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,11 +35,11 @@
       </form>
     </section>
   </main>
-  <div>Things to watch</div><div data-cat="watch" id="watch"></div>
-  <div>Books to read</div><div data-cat="read" id="read"></div>
-  <div>Places to eat at</div><div data-cat="eat" id="eat"></div>
-  <div>Stuff to buy</div><div data-cat="buy" id="buy"></div>
-  <div>Miscellaneous</div><div data-cat="misc" id="misc"></div>
+  <div>Things to watch</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="watch" id="watch"></div></ul>
+  <div>Books to read</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="read" id="read"></div></ul>
+  <div>Places to eat at</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="eat" id="eat"></div></ul>
+  <div>Stuff to buy</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="buy" id="buy"></div></ul>
+  <div>Miscellaneous</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="misc" id="misc"></div></ul>
 </body>
 
 
