reclassified some html for styling purposes

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,12 +3,13 @@
 <head>
   <title>Home Page</title>
   <link rel="stylesheet" href="/styles/dashboard.css" type="text/css" </link>
-  <link rel="stylesheet" type="text/css" href="css/style.css"></link>
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/vendor/dragula.js"></script>
   <link rel="stylesheet" type="text/css" href="/vendor/dragula.css"></link>
   <script type="text/javascript" src="/scripts/dashboard.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css"></link>
+
 
 </head>
 
@@ -35,11 +36,11 @@
       </form>
     </section>
   </main>
-  <div>Things to watch</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="watch" id="watch"></div></ul>
-  <div>Books to read</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="read" id="read"></div></ul>
-  <div>Places to eat at</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="eat" id="eat"></div></ul>
-  <div>Stuff to buy</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="buy" id="buy"></div></ul>
-  <div>Miscellaneous</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="misc" id="misc"></div></ul>
+  <div id="watchbutton">Things to watch</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="watch" id="watch"></div></ul>
+  <div id="readbutton">Books to read</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="read" id="read"></div></ul>
+  <div id="eatbutton">Places to eat at</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="eat" id="eat"></div></ul>
+  <div id="buybutton">Stuff to buy</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="buy" id="buy"></div></ul>
+  <div id="miscbutton">Miscellaneous</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="misc" id="misc"></div></ul>
 </body>
 
 
