--- a/public/updateprofile.html
+++ b/public/updateprofile.html
@@ -3,8 +3,12 @@
   <head>
     <title>Home Page</title>
   </head>
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/updateprofile.css"></link>
     <link rel="stylesheet" type="text/css" href="styles/dashboard.css"></link>
     <link rel="stylesheet" type="text/css" href="css/style.css"></link>
+
 
   <body>
       <ul id="dropdown1" class="dropdown-content">
@@ -31,7 +35,5 @@
     </form>
 
   </body>
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
 
 </html>
