--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <nav>
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo"><img id="catlogo" src="./images/catlogo.jpg"></a>
+      <a href="/" class="brand-logo"><img id="catlogo" src="./images/catlogo.jpeg"></a>
       <span>Skelletapp</span>
       <form class="col s12" method="POST" action="/">
         <label for="first_name">Email</label>
