--- a/public/updateprofile.html
+++ b/public/updateprofile.html
@@ -17,7 +17,7 @@
     </ul>
     <nav>
       <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Logo</a>
+        <a href="/" class="brand-logo"><img id="catlogo" src="./images/catlogo.jpeg"></a>
         <!-- <ul class="right hide-on-med-and-down"> -->
           <!-- Dropdown Trigger -->
           <a class="dropdown-button" href="#!" data-activates="dropdown1">Settings<i class="material-icons right"></i></a>
