--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -19,6 +19,7 @@
   </ul>
   <nav>
     <div class="nav-wrapper">
+      <a href="/"><span>Skeletapp</span></a>
       <a href="/" class="brand-logo"><img id="catlogo" src="./images/catlogo.jpeg"></a>
       <!-- <ul class="right hide-on-med-and-down"> -->
       <!-- Dropdown Trigger -->
