--- a/public/updateprofile.html
+++ b/public/updateprofile.html
@@ -17,6 +17,7 @@
     </ul>
     <nav>
       <div class="nav-wrapper">
+      <a href="/"><span>Skeletapp</span></a>
         <a href="/" class="brand-logo"><img id="catlogo" src="./images/catlogo.jpeg"></a>
         <!-- <ul class="right hide-on-med-and-down"> -->
           <!-- Dropdown Trigger -->
