--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -19,11 +19,8 @@
 </ul>
 <nav>
   <div class="nav-wrapper">
-    <a href="/" class="brand-logo"><span>Skeletapp</span><img id="catlogo" src="./images/catlogo.jpeg"></a>
-    <!-- <ul class="right hide-on-med-and-down"> -->
-    <!-- Dropdown Trigger -->
+    <a href="/" class="brand-logo"><span id="brandname">Skeletapp</span><img id="catlogo" src="./images/catlogo.jpeg"></a>
     <a class="dropdown-button" href="#!" data-activates="dropdown1">Settings<i class="material-icons right"></i></a>
-    <!-- </ul> -->
   </div>
 </nav>
 
@@ -37,11 +34,11 @@
   </section>
 </main>
 <div id="todocont">
-  <div id="watchbutton">Things to watch</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="watch" id="watch"></div></ul>
-  <div id="readbutton">Books to read</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="read" id="read"></div></ul>
-  <div id="eatbutton">Places to eat at</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="eat" id="eat"></div></ul>
-  <div id="buybutton">Stuff to buy</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="buy" id="buy"></div></ul>
-  <div id="miscbutton">Miscellaneous</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="misc" id="misc"></div></ul>
+  <div id="watchbutton" class="catbuttons">Things to watch</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="watch" id="watch"></div></ul>
+  <div id="readbutton" class="catbuttons">Books to read</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="read" id="read"></div></ul>
+  <div id="eatbutton" class="catbuttons">Places to eat at</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="eat" id="eat"></div></ul>
+  <div id="buybutton" class="catbuttons">Stuff to buy</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="buy" id="buy"></div></ul>
+  <div id="miscbutton" class="catbuttons">Miscellaneous</div><ul class="collapsible" data-collapsible="accordion"><div data-cat="misc" id="misc"></div></ul>
 </div>
 </body>
 
