--- a/public/updateprofile.html
+++ b/public/updateprofile.html
@@ -17,12 +17,8 @@
     </ul>
     <nav>
       <div class="nav-wrapper">
-      <a href="/"><span>Skeletapp</span></a>
-        <a href="/" class="brand-logo"><img id="catlogo" src="./images/catlogo.jpeg"></a>
-        <!-- <ul class="right hide-on-med-and-down"> -->
-          <!-- Dropdown Trigger -->
-          <a class="dropdown-button" href="#!" data-activates="dropdown1">Settings<i class="material-icons right"></i></a>
-        <!-- </ul> -->
+        <a href="/" class="brand-logo"><span id="brandname">Skeletapp</span><img id="catlogo" src="./images/catlogo.jpeg"></a>
+        <a class="dropdown-button" href="#!" data-activates="dropdown1">Settings<i class="material-icons right"></i></a>
       </div>
     </nav>
 
