--- a/public/updateprofile.html
+++ b/public/updateprofile.html
@@ -28,7 +28,7 @@
               Name:<input type="text" name="name" class="inputVal"><br>
               Email:<input type="email" name="email" class="inputVal"><br>
               Password:<input type="password" name="password" class="inputVal">
-              <input type="submit" value= "update">
+              <input type="submit" value= "update"><span id="updateMessage"></span>
     </form>
 
   </body>
